<resources>
    <string name="app_name">Quiz App</string>
    <string name="raj_kishor_quiz_app">Raj Kishor Quiz App</string>
    <string name="todo">TODO</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="what_is_the_first_pm_of_india">what is the first PM of India</string>
    <string name="who_is_the_raj_kishor">who is the Raj Kishor</string>
    <string name="next"><![CDATA[next ->]]></string>
    <string name="wait">Wait</string>
    <string name="confirm_password">Confirm Password</string>
</resources>