<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#482D28"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Welcome to Quiz app"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameSignUp"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_texview"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/emailSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_texview"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/password_SignUp"
        app:layout_constraintEnd_toEndOf="@+id/nameSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/nameSignUp"
        app:layout_constraintTop_toBottomOf="@+id/nameSignUp" />

    <EditText
        android:id="@+id/password_SignUp"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_texview"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Comfirm_password_SignUp"
        app:layout_constraintEnd_toEndOf="@+id/emailSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/emailSignUp"
        app:layout_constraintTop_toBottomOf="@+id/emailSignUp" />

    <EditText
        android:id="@+id/Comfirm_password_SignUp"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_texview"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        app:layout_constraintEnd_toEndOf="@+id/password_SignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/password_SignUp"
        app:layout_constraintTop_toBottomOf="@+id/password_SignUp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="150dp"
        app:layout_constraintTop_toBottomOf="@+id/Comfirm_password_SignUp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account"

        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="578dp" />

</androidx.constraintlayout.widget.ConstraintLayout>